Fix chatbot issues: CSP, API key rename, and improved error handling
- Changed API key from GOOGLE_API_KEY to GEMINI_API_KEY
- Fixed Content Security Policy to allow localhost:3001 connections
- Improved error handling and logging in ChatWidget and server
- Added comprehensive debugging documentation
- Updated server to handle AI SDK v3 message format (parts array)
- Added root route to API server with clear information
- Enhanced error messages and troubleshooting guides

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Content Security Policy -->
     <!-- Note: frame-ancestors only works via HTTP headers, not meta tags -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://esm.sh https://fonts.googleapis.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: http:; connect-src 'self' http://127.0.0.1:7245 https://esm.sh; base-uri 'self'; form-action 'self';">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://esm.sh https://fonts.googleapis.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: http:; connect-src 'self' http://127.0.0.1:7245 http://localhost:3001 http://localhost:3000 https://esm.sh; base-uri 'self'; form-action 'self';">
     <title>Timo Intelligence | Technology. Intelligence. Mastering. Optimization.</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
